--- a/404.html
+++ b/404.html
@@ -17,13 +17,18 @@
         }
         .container {
             text-align: center;
+            width: 100%; /* Asegura que el contenedor ocupe todo el ancho */
+        }
+        img {
+            width: 100%; /* Imagen se ajusta al ancho completo */
+            height: auto; /* Mantiene proporción */
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <img src="img/error404.png" alt="Error 404" style="max-width: 50%; height: auto;">
+        <img src="img/error404.png" alt="Error 404">
     </div>
 
     <script>
