--- a/404.html
+++ b/404.html
@@ -19,10 +19,13 @@
             text-align: center;
             width: 100%; /* Asegura que el contenedor ocupe todo el ancho */
         }
-        img {
-            width: 100%; /* Imagen se ajusta al ancho completo */
-            height: auto; /* Mantiene proporción */
-        }
+<style>
+    img {
+        width: 100vw; /* Ancho completo de la pantalla */
+        height: auto; /* Mantener proporción */
+        display: block; /* Elimina márgenes blancos */
+    }
+
     </style>
 </head>
 <body>
