--- a/Contenido/Carrito/404.html
+++ b/Contenido/Carrito/404.html
@@ -6,7 +6,7 @@
     <title>Error 404 - Sin Conexión</title>
     <style>
         /* Estilos para centrar el contenido */
-        body {
+body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,6 +17,11 @@
         }
         .container {
             text-align: center;
+            width: 100%; /* Asegura que el contenedor ocupe todo el ancho */
+        }
+        img {
+            width: 100%; /* Imagen se ajusta al ancho completo */
+            height: auto; /* Mantiene proporción */
         }
     </style>
 </head>
