--- a/404.html
+++ b/404.html
@@ -19,13 +19,11 @@
             text-align: center;
             width: 100%; /* Asegura que el contenedor ocupe todo el ancho */
         }
-<style>
-    img {
-        width: 100vw; /* Ancho completo de la pantalla */
-        height: auto; /* Mantener proporción */
-        display: block; /* Elimina márgenes blancos */
-    }
-
+        img {
+            width: 100vw; /* Imagen se ajusta al ancho completo de la pantalla */
+            height: auto; /* Mantiene proporción */
+            display: block; /* Elimina márgenes o bordes extra */
+        }
     </style>
 </head>
 <body>
