--- a/Contenido/Historia/index.html
+++ b/Contenido/Historia/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-   <a href="https://verne935.github.io/movilrestaurante/" class="logo-title">
+   <a href="https://verne935.github.io/m/" class="logo-title">
         <img src="img/logo.png" class="logo" alt="">
         <h1>HISTORIA SUPER EMPANADAS</h1>
     </a>
