--- a/Contenido/Comentarios/index.html
+++ b/Contenido/Comentarios/index.html
@@ -12,7 +12,7 @@
 <div class="container">
 
         
-        <a href="https://verne935.github.io/movilrestaurante/">
+        <a href="https://verne935.github.io/m//">
             <img src="img/logo.png" class="logo" alt="">
         </a>
 
